fix for clipping

--- a/source/stylesheets/graybike/misc/_fade-up.scss
+++ b/source/stylesheets/graybike/misc/_fade-up.scss
@@ -7,7 +7,8 @@ $duration: 1.5s;
 
 
 .fade-in {
-  @include animation(fadeupquick $duration ease forwards);
+  @include animation(fadein $duration ease forwards);
+  @include backface-visibility(hidden);
 }
 
 .fade-up-delay {
@@ -27,14 +28,12 @@ $duration: 1.5s;
 }
 
 
-@include keyframes(fadeupquick) {
+@include keyframes(fadein) {
   from {
     opacity: 0;
-    @include transform(translateY(0));
   }
 
   to {
     opacity: 1;
-    @include transform(translateY(0));
   }
 }
