--- a/source/stylesheets/graybike/pages/_landing.scss
+++ b/source/stylesheets/graybike/pages/_landing.scss
@@ -27,7 +27,7 @@ article.landing {
       top: 0;
       left: 50%;
       margin-left: -20px;
-      width: 40px;
+      height: 40px;
       width: 40px;
       &.filled {
         opacity: 0;
